# sx1280_ranging_demo

./: .gitignore  .mxproject  SX1280_DemoApp.ioc
App/: RangingDisplay.c  RangingDisplay.h  demoRanging.c  demoRanging.h  main_ranging.c  main_ranging.h  timoueter.c
Core/Inc/: stm32f1xx_hal_conf.h  stm32f1xx_it.h
Core/Src/: main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c  syscalls.c
MDK-ARM/: JLinkLog.txt  SX1280_DemoApp.uvguix.zenko  SX1280_DemoApp.uvoptx  SX1280_DemoApp.uvprojx  startup_stm32f103xb.lst
MDK-ARM/SX1280_DemoApp/: SX1280_DemoApp.axf  SX1280_DemoApp.build_log.htm  SX1280_DemoApp.hex  SX1280_DemoApp.htm  SX1280_DemoApp.lnp  SX1280_DemoApp.map  SX1280_DemoApp_SX1280_DemoApp.dep  demoranging.d  hw-gpio.d  hw-lptim.d  hw-spi.d  main.crf  main.d  main_ranging.d  rangingdisplay.d  segger_rtt.d  segger_rtt_printf.d  segger_rtt_syscalls_keil.d  startup_stm32f103xb.d  stm32f1xx_hal.crf  stm32f1xx_hal.d  stm32f1xx_hal_cortex.crf  stm32f1xx_hal_cortex.d  stm32f1xx_hal_dma.crf  stm32f1xx_hal_dma.d  stm32f1xx_hal_exti.crf  stm32f1xx_hal_exti.d  (+35 more)
SEGGER/: CMakeLists.txt
SEGGER/Examples/: Main_RTT_InputEchoApp.c  Main_RTT_MenuApp.c  Main_RTT_PrintfTest.c  Main_RTT_SpeedTestApp.c
SEGGER/RTT/: SEGGER_RTT.c  SEGGER_RTT.h  SEGGER_RTT_Conf.h  SEGGER_RTT_printf.c
SEGGER/Syscalls/: SEGGER_RTT_Syscalls_GCC.c  SEGGER_RTT_Syscalls_IAR.c  SEGGER_RTT_Syscalls_KEIL.c  SEGGER_RTT_Syscalls_SES.c
SX1280/: RangingCorrection.h  radio.h  sx1280-hal.c  sx1280-hal.h  sx1280.c  sx1280.h
SX1280_HAL/: boards.h  hw-gpio.c  hw-gpio.h  hw-lptim.c  hw-lptim.h  hw-spi.c  utilities.c
(+1 files in other folders)
